# c-ini

./: CMakeLists.txt  README.md
c-ini/: c-ini.c  c-ini.h
examples/: CMakeLists.txt  example1.c  example2.c  example2_client.h  example2_server.h  example3.c
tests/: CMakeLists.txt  custom_str.cpp  custom_str.h  custom_strlist.cpp  custom_strlist.h  test_custom_str.cpp  test_custom_strlist.cpp  test_defaults.cpp  test_dynamic_str.cpp  test_dynamic_strlist.cpp  test_fixed_str.cpp  test_fixed_strlist.cpp  test_parse_types.cpp
